# todo

./: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt
base/: models.py  views.py
todo_list/: settings.py
