[tool.poetry]
name = "django todo list"
version = "0.1.0"
description = "todo list app in django using dataclasses"
authors = ["joao martins"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
